--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ procmail/home/log/*
 bash/gitprompt.sh
 bash/gitstatus.py
 
+# awesome
+awesome/lain
+
 # i3
 i3/i3log
 
@@ -52,16 +55,16 @@ mutt/temp/*
 # sublime
 dot-files-forest.sublime-workspace
 
-#sublime-text-3/Cache/
-#sublime-text-3/Index/
-#sublime-text-3/Installed Packages/
-#sublime-text-3/Local/
-#sublime-text-3/Packages/User/Package Control.last-run
-#sublime-text-3/Packages/User/Package Control.ca-list
-#sublime-text-3/Packages/User/Package Control.ca-bundle
-#sublime-text-3/Packages/User/Package Control.system-ca-bundle
-#sublime-text-3/Packages/User/Package Control.cache/
-#sublime-text-3/Packages/User/Package Control.ca-certs/
+sublime-text-3/Cache/
+sublime-text-3/Index/
+sublime-text-3/Installed Packages/
+sublime-text-3/Local/
+sublime-text-3/Packages/User/Package Control.last-run
+sublime-text-3/Packages/User/Package Control.ca-list
+sublime-text-3/Packages/User/Package Control.ca-bundle
+sublime-text-3/Packages/User/Package Control.system-ca-bundle
+sublime-text-3/Packages/User/Package Control.cache/
+sublime-text-3/Packages/User/Package Control.ca-certs/
 
 
 #sublime-text-3/Packages/BracketHighlighter
