--- a/i3/config
+++ b/i3/config
@@ -10,10 +10,8 @@ set $mod Mod4
 # programs to run at startup
 exec --no-startup-id /usr/bin/xrdb /home/skk/.Xresources
 exec --no-startup-id gpg-agent --daemon --enable-ssh-support --write-env-file "${HOME}/.gpg-agent-info"
-#exec --no-startup-id /usr/libexec/gnome-settings-daemon
-#exec --no-startup-id gnome-sound-applet
-exec --no-startup-id /usr/bin/xfce4-session
-exec --no-startup-id /usr/bin/feh --bg-fill /home/skk/.i3/hubble_ultra_deep_field.jpg
+exec --no-startup-id /usr/bin/gnome-session
+#exec --no-startup-id /usr/bin/feh --bg-fill /home/skk/.i3/hubble_ultra_deep_field.jpg
 
 # The nvidia driver only provides support for Xinerama instead of RandR.
 force_xinerama no
@@ -126,7 +124,8 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec i3-nagbar -m "Session menu" -b "Quit" "i3-msg -t command exit" -b "Restart" "sudo reboot" -b "Halt" "sudo halt" -b "Suspend" "sudo pm-suspend" -b "Suspend/Hybrid" "sudo pm-suspend-hybrid"
 
 # lock screen using i3lock
-bindsym $mod+Shift+Control+l exec i3lock
+#bindsym $mod+Shift+Control+l exec i3lock
+bindsym $mod+Shift+Control+l exec xflock4
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
