--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,64 +1,122 @@
-# ` is an interesting key for a prefix
-set-option -g prefix `
-# set-option -g prefix C-a
 
+###########################
+#  Configuration
+###########################
+
+# use 256 term for pretty colors
+set -g default-terminal "screen-256color"
+
+# increase scroll-back history
+set -g history-limit 5000
+
+# use vim key bindings
+setw -g mode-keys vi
+
+# disable mouse
+setw -g mode-mouse off
+
+# decrease command delay (increases vim responsiveness)
+set -sg escape-time 1
+
+# increase repeat time for repeatable commands
+set -g repeat-time 1000
+
+# start window index at 1
+set -g base-index 1
+
+# start pane index at 1
+setw -g pane-base-index 1
+
+# highlight window when it has new activity
+setw -g monitor-activity on
+set -g visual-activity on
+
+# re-number windows when one is closed
+set -g renumber-windows on
+
+# enable pbcopy and pbpaste
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+###########################
+#  Key Bindings
+###########################
+
+# tmux prefix
 unbind-key C-b
 bind-key C-a last-window
 bind-key ` last-window
-bind-key a send-prefix
 
-# we might need ` at some point, allow switching
-# we can also send the prefix char with `-a
-bind-key F11 set-option -g prefix C-a
-bind-key F12 set-option -g prefix `
+# copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# 0 is too far from ` ;)
-set -g base-index 1
+# create 'v' alias for selecting text
+bind-key -t vi-copy v begin-selection
 
-# set-option -g default-terminal "screen-256color"
-set-option -g mouse-select-pane on
-set-option -g status-keys vi
-set-option -g bell-action any
-set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
-set-option -g visual-bell on
+# paste
+unbind C-p
+bind C-p paste-buffer
 
-setw -g mode-keys vi
-setw -g mode-mouse on
-setw -g monitor-activity on
+# window splitting
+unbind %
+bind | split-window -h
+unbind '"'
+bind - split-window -v
 
-bind e previous-window
-bind f next-window
-#bind j up-pane
-#bind k down-pane
+# resize panes
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
-set-option -g status-utf8 on
-# set-option -g status-justify centre
-set-option -g status-justify left
-set-option -g status-bg black
-set-option -g status-fg white
-set-option -g status-left-length 40
+# quickly switch panes
+unbind ^J
+bind ^J select-pane -t :.+
 
-set-option -g pane-active-border-fg green
-set-option -g pane-active-border-bg black
-set-option -g pane-border-fg white
-set-option -g pane-border-bg black
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-set-option -g message-fg black
-set-option -g message-bg green
+###########################
+# Status Bar
+###########################
 
-#setw -g mode-bg black
+# enable UTF-8 support in status bar
+set -g status-utf8 on
 
-setw -g window-status-bg black
-setw -g window-status-current-fg green
-#setw -g window-status-alert-attr default
-#setw -g window-status-alert-fg yellow
+# set refresh interval for status bar
+set -g status-interval 30
 
-set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
+# center the status bar
+set -g status-justify left
 
-# set -g status-right '#[fg=green]][#[fg=white] #T #[fg=green]][ #[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]'
-set -g status-right '#[fg=green]][ #[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]'
+# show session, window, pane in left status bar
+set -g status-left-length 40
+set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
 
-set -g history-limit 4096
+# show hostname, date, time, and battery in right status bar
+set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
+ #[fg=red]#(battery discharging)#[default]#(battery charging)'
 
-bind r source-file ~/.tmux.conf
+###########################
+# Colors
+###########################
+
+# color status bar
+set -g status-bg colour235
+set -g status-fg white
+
+# highlight current window
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg green
+
+# set color of active pane
+set -g pane-border-fg colour235
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
+
+
+
