--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -36,11 +36,13 @@ set -g renumber-windows on
 
 # enable pbcopy and pbpaste
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/blob/master/README.md
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 ###########################
 #  Key Bindings
 ###########################
+#
+set-option -g prefix `
 
 # tmux prefix
 unbind-key C-b
@@ -48,9 +50,9 @@ bind-key C-a last-window
 bind-key ` last-window
 
 # copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # create 'v' alias for selecting text
 bind-key -t vi-copy v begin-selection
@@ -93,12 +95,18 @@ set -g status-interval 30
 set -g status-justify left
 
 # show session, window, pane in left status bar
-set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+#set -g status-left-length 40
+#set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
- #[fg=red]#(battery discharging)#[default]#(battery charging)'
+#set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M\
+# [fg=red]#(battery discharging)#[default]#(battery charging)'
+
+
+set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
+set -g status-right '#[fg=green]][ #[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]'
+set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
+
 
 ###########################
 # Colors
