--- a/i3/config
+++ b/i3/config
@@ -9,9 +9,7 @@ set $mod Mod4
 
 # programs to run at startup
 exec --no-startup-id /usr/bin/xrdb /home/skk/.Xresources
-exec --no-startup-id gpg-agent --daemon --enable-ssh-support --write-env-file "${HOME}/.gpg-agent-info"
 exec --no-startup-id /usr/bin/gnome-session
-#exec --no-startup-id /usr/bin/feh --bg-fill /home/skk/.i3/hubble_ultra_deep_field.jpg
 exec --no-startup-id urxvtd
 exec --no-startup-id pasystray
 
@@ -26,11 +24,6 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec urxvt
-#bindsym $mod+Return exec gnome-terminal
-#bindsym $mod+Return exec terminator
-#bindsym $mod+Return exec xfce4-terminal
-#bindsym $mod+Return exec terminology
-#bindsym $mod+Shift+Return exec ~/.i3/dmenufm.sh
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -118,14 +111,14 @@ bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # session menu
-bindsym $mod+Shift+e exec i3-nagbar -m "Session menu" -b "Quit" "i3-msg -t command exit" -b "Restart" "sudo reboot" -b "Halt" "sudo halt" -b "Suspend" "sudo pm-suspend" -b "Suspend/Hybrid" "sudo pm-suspend-hybrid"
+bindsym $mod+Shift+e exec i3-nagbar -m "Session menu" -b "Quit" "i3-msg -t command exit" -b "Restart" "sudo reboot" -b "Halt" "sudo halt" -b "Suspend" "sudo systemctl suspend"
 
 # lock screen using i3lock
-#bindsym $mod+Shift+Control+l exec i3lock
-#bindsym $mod+Shift+Control+l exec xflock4
 bindsym $mod+Shift+Control+l exec "gnome-screensaver-command --lock"
 
 # Make the currently focused window a scratchpad
@@ -154,14 +147,13 @@ ipc-socket ~/.i3/i3-ipc.sock
 bar {
     position bottom
     font pango:Sans 8
-    #font pango:Source Sans Pro 8.5
     status_command i3status --config ~/.i3/i3status.conf
     tray_output primary
     colors {
         background #073642
         statusline #eee8d5
-        focused_workspace #cb4b16 #cb4b16 #eee8d5
-        active_workspace #cb4b16 #cb4b16 #eee8d5
+        focused_workspace  #cb4b16 #cb4b16 #eee8d5
+        active_workspace   #cb4b16 #cb4b16 #eee8d5
         inactive_workspace #b58900 #b58900 #eee8d5
     }
 }
@@ -170,11 +162,3 @@ bar {
 client.focused          #859900 #859900 #fdf6e3 #2e9ef4
 client.focused_inactive #268bd2 #268bd2 #fdf6e3 #484e50
 client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
-
-# Enable/disable logging
-#bindsym $mod+x debuglog toggle
-#bindsym $mod+Shift+x shmlog toggle
-
-
-#exec --no-startup-id i3-msg 'workspace 3; exec google-chrome-beta; workspace 1'
-
