--- a/installer/Gemfile
+++ b/installer/Gemfile
@@ -9,7 +9,6 @@ group :development do
   gem "jeweler", "~> 1.8.7"
   gem "simplecov", "~> 0.8.2"
   gem "simplecov-rcov", "~> 0.2.0"
-  gem 'mixlib-cli', "~> 1.3.0"
-  gem 'mixlib-log', "~> 1.6.0"
-  gem 'rubocop', "~> 0.15.0"
+  gem "rubocop", "~> 0.18.1"
+  gem "pry", "~> 0.9"
 end
