--- a/i3/config
+++ b/i3/config
@@ -10,11 +10,18 @@ set $mod Mod4
 # programs to run at startup
 exec --no-startup-id /usr/bin/xrdb /home/skk/.Xresources
 exec --no-startup-id /usr/bin/gnome-session
-exec --no-startup-id urxvtd
+exec --no-startup-id urxvtd -q -f -o
 exec --no-startup-id pasystray
 
+# Start thunderbird, subl3, cantata and chromium on specific workspaces.
+# Starting additional instances will be started on the current workspace.
+exec --no-startup-id i3-msg 'workspace 5; exec cantata'
+exec --no-startup-id i3-msg 'workspace 4; exec thunderbird'
+exec --no-startup-id i3-msg 'workspace 2; exec subl3'
+exec --no-startup-id i3-msg 'workspace 1; exec chromium'
+
 # The nvidia driver only provides support for Xinerama instead of RandR.
-force_xinerama no
+#force_xinerama no
 
 # Font for window titles.
 font pango:Sans 8
@@ -23,17 +30,17 @@ font pango:Sans 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvt
+bindsym $mod+Return exec urxvtc
+bindsym $mod+Shift+Return exec "urxvtd -f -o"
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec j4-dmenu-desktop
+bindsym $mod+d exec j4-dmenu-desktop --dmenu="dmenu -z -fn 'Sans-8'"
 
 # dmenu_ssh
-bindsym $mod+t exec ~/dmenu_ssh/bin/dmenu_ssh.pl
+bindsym $mod+t exec ~/src/dmenu_ssh/bin/dmenu_ssh.pl
 
 # change focus
 bindsym $mod+j focus left
@@ -118,8 +125,10 @@ bindsym $mod+Shift+r restart
 # session menu
 bindsym $mod+Shift+e exec i3-nagbar -m "Session menu" -b "Quit" "i3-msg -t command exit" -b "Restart" "sudo reboot" -b "Halt" "sudo halt" -b "Suspend" "sudo systemctl suspend"
 
-# lock screen using i3lock
-bindsym $mod+Shift+Control+l exec "gnome-screensaver-command --lock"
+# lock screen using i3lock and suspend machine
+bindsym $mod+Shift+Control+l exec "i3lock --no-unlock-indicator --pointer=win --image=/home/skk/Pictures/hs-2012-37-a-full_jpg.png; sudo systemctl suspend"
+
+bindsym $mod+Control+l exec "i3lock --image=/home/skk/Pictures/hs-2012-37-a-full_jpg.png"
 
 # Make the currently focused window a scratchpad
 #bindsym $mod+Shift+minus move scratchpad
@@ -147,7 +156,8 @@ ipc-socket ~/.i3/i3-ipc.sock
 bar {
     position bottom
     font pango:Sans 8
-    status_command i3status --config ~/.i3/i3status.conf
+    #status_command i3status --config ~/.i3/i3status.conf
+    status_command py3status -c ~/.i3/i3status.conf
     tray_output primary
     colors {
         background #073642
@@ -162,3 +172,6 @@ bar {
 client.focused          #859900 #859900 #fdf6e3 #2e9ef4
 client.focused_inactive #268bd2 #268bd2 #fdf6e3 #484e50
 client.unfocused        #333333 #93a1a1 #fdf6e3 #292d2e
+
+
+#for_window [class="Steam"] floating enable
