--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ sublime-text-3/Packages/User/Package Control.ca-certs/
 #sublime-text-3/Packages/SublimeTODO
 #sublime-text-3/Packages/Theme - Cobalt2
 #sublime-text-3/Packages/i3wm-sublime
+gnupg/gpg-agent.env.fish
