--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,6 @@ mutt/temp/*
 
 # sublime
 dot-files-forest.sublime-workspace
-
 sublime-text-3/Cache/
 sublime-text-3/Backup/
 sublime-text-3/Index/
@@ -70,16 +69,20 @@ sublime-text-3/Packages/User/Package Control.ca-bundle
 sublime-text-3/Packages/User/Package Control.system-ca-bundle
 sublime-text-3/Packages/User/Package Control.cache/
 sublime-text-3/Packages/User/Package Control.ca-certs/
+sublime-text-3/Settings/BufferScroll.bin.gz
+sublime-text-3/Packages/Colorcoder/
+sublime-text-3/Packages/HTML/
+sublime-text-3/Packages/PlainTasks/
+sublime-text-3/Packages/PyV8/
+sublime-text-3/Packages/Rails/
+sublime-text-3/Packages/SublimeCodeIntel/
+sublime-text-3/Packages/SublimeLinter/
+sublime-text-3/Packages/Terminal/
+sublime-text-3/sublimeBookmarks.pickle
 
-sublime-text-3/Packages/Colorcoder/firstrun
-
-
-#sublime-text-3/Packages/BracketHighlighter
-#sublime-text-3/Packages/PyV8/linux64-p3
-#sublime-text-3/Packages/SublimeCodeIntel
-#sublime-text-3/Packages/SublimeTODO
-#sublime-text-3/Packages/Theme - Cobalt2
-#sublime-text-3/Packages/i3wm-sublime
+# GPG
 gnupg/gpg-agent.env.fish
+
+# ctags
 .tags
 .tags_sorted_by_file
