--- a/terminol/config
+++ b/terminol/config
@@ -1,7 +1,8 @@
-set font-name "Envy Code R"
+#set font-name "Envy Code R"
+set font-name "Anonymice Powerline"
 set font-size 11
 
-set color-scheme zenburn
+set color-scheme zenburn-dark
 
 set map-on-bell                 false
 set urgent-on-bell              false
