--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "oh-my-fish"]
 	path = oh-my-fish
 	url = git://github.com/bpinto/oh-my-fish.git
+[submodule "powerline-shell"]
+	path = powerline-shell
+	url = git@github.com:milkbikis/powerline-shell.git
