--- a/i3/config
+++ b/i3/config
@@ -168,9 +168,7 @@ ipc-socket ~/.i3/i3-ipc.sock
 bar {
     position bottom
     font pango:Sans 8
-    #status_command i3status --config ~/.i3/i3status.conf
-    #status_command py3status -c ~/.i3/i3status.conf
-    status_command i3blocks -c ~/.i3/i3blocks.conf
+    status_command py3status -c ~/.i3/i3status.conf
     tray_output primary
     colors {
         background #073642
