--- a/i3/config
+++ b/i3/config
@@ -3,16 +3,10 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 
-# programs to run at startup
-exec --no-startup-id pasystray
-exec --no-startup-id start-pulseaudio-x11
-
 # Make Caps Lock an additional Hyper
 #exec --no-startup-id setxkbmap -option caps:hyper
 # Caps Locking is disabled with Caps Lock key
 #exec --no-startup-id setxkbmap -option caps:none
-
-#exec --no-startup-id /home/skk/setxkbmap.sh
 
 # Mod1 --> Alt Key
 # Mod4 --> Win Key
@@ -103,29 +97,41 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindcode $mod+d focus child
 
+# workspace definitions
+set $ws1 1: Web
+set $ws2 2: Subl
+set $ws3 3: Term
+set $ws4 4: Term
+set $ws5 5: Mail
+set $ws6 6: Music
+set $ws7 7: Misc
+set $ws8 8: Misc
+set $ws9 9: Misc
+set $ws10 10: Steam
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
