--- a/dotfiles/fonts.conf
+++ b/dotfiles/fonts.conf
@@ -1,1 +1,5 @@
-/home/skk/.config/fontconfig/fonts.conf
+<match target="font" >
+<edit name="embeddedbitmap" mode="assign">
+<bool>false</bool>
+</edit>
+</match>
