--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "z-fish"]
 	path = z-fish
 	url = git@github.com:roryokane/z-fish.git
+[submodule "fish-nuggets"]
+	path = fish-nuggets
+	url = git@github.com:zmalltalker/fish-nuggets.git
+[submodule "git-flow-completion"]
+	path = git-flow-completion
+	url = git@github.com:bobthecow/git-flow-completion.git
