--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "git-flow-completion"]
 	path = git-flow-completion
 	url = git@github.com:bobthecow/git-flow-completion.git
+[submodule "zsh-vcs-prompt"]
+	path = zsh-vcs-prompt
+	url = git@github.com:yonchu/zsh-vcs-prompt.git
