--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "zsh-vcs-prompt"]
 	path = zsh-vcs-prompt
 	url = git@github.com:yonchu/zsh-vcs-prompt.git
+[submodule "LS_COLORS"]
+	path = LS_COLORS
+	url = git@github.com:trapd00r/LS_COLORS.git
+[submodule "zsh-syntax-highlighting"]
+	path = zsh-syntax-highlighting
+	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
