--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = git://github.com/robbyrussell/oh-my-zsh.git
+[submodule "scm_breeze"]
+	path = scm_breeze
+	url = git@github.com:ndbroadbent/scm_breeze.git
